samples/_failures_safe/1761321316_74269b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc0de790.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_cc0de790.c:186:24: error: expected ‘,’ or ‘;’ at end of input
  186 |                 struct GraphNode* neighbor = graph->edges
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_cc0de790.c:186:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cc0de790.c:186:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cc0de790.c:186:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cc0de790.c:186:24: error: expected declaration or statement at end of input
